examples/insecure-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: insecure-demo
  namespace: default
spec:
  hostNetwork: true
  hostPID: true
  containers:
    - name: app
      image: nginx:latest
      securityContext:
        privileged: true
        runAsUser: 0
        allowPrivilegeEscalation: true
        capabilities:
          add: ["SYS_ADMIN", "NET_ADMIN"]
  volumes:
    - name: host-root
      hostPath:
        path: /
